# functions-py

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  pytest.ini  release-please-config.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  conventional-commits.yml
functionz/: functionz.py
supabase_functions/: __init__.py  errors.py  utils.py  version.py
supabase_functions/_async/: functions_client.py
supabase_functions/_sync/: functions_client.py
supafunc/: __init__.py  errors.py  functions_client.py  supafunc.py  utils.py
supafunc/_async/: functions_client.py
supafunc/_sync/: functions_client.py
tests/: test_client.py  test_errors.py  test_utils.py
tests/_async/: clients.py  test_function_client.py
tests/_sync/: clients.py  test_function_client.py
