[tool.poetry]
name = "supabase_functions"
version = "0.6.0" # {x-release-please-version}
description = "Library for Supabase Functions"
authors = [
    "Joel Lee <joel@joellee.org>",
    "Andrew Smith <a.smith@silentworks.co.uk>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/supabase/functions-py"

[tool.poetry.dependencies]
python = "^3.8"
httpx = {version = ">=0.24,<0.28", extras = ["http2"]}

[tool.poetry.group.dev.dependencies]
black = ">=23.9.1,<25.0.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"
pyjwt = "^2.8.0"
pytest = ">=7.4.2,<9.0.0"
pytest-cov = ">=4,<6"
unasync-cli = "^0.0.9"
pytest-asyncio = ">=0.21.1,<0.25.0"
respx = ">=0.20.2,<0.22.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
